JSW Devsb/src/objects/Vendor_Gift_Management__c.object
<CustomObject>
    <fields>
        <fullName>Delivered_At__c</fullName>
        <label>Delivered At</label>
        <picklist>
            <picklistValues>
                <fullName>HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Name__c</fullName>
        <label>Gift Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Stock__c</fullName>
        <label>Gift Stock</label>
        <referenceTo>Gift_Stock__c</referenceTo>
        <relationshipLabel>Vendors Gift Tracking</relationshipLabel>
        <relationshipName>Vendors_Gift_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gift_Text__c</fullName>
        <formula>Gift_Stock__r.Gift__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Vendors Gift Tracking</relationshipLabel>
        <relationshipName>Vendors_Gift_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Order__c</fullName>
        <label>Purpose of Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Delivered_by_Vendor__c</fullName>
        <label>Quantity Delivered by Vendor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Vendors Gift Tracking</relationshipLabel>
        <relationshipName>Vendors_Gift_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vendor Gift Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Vendor Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors Gift Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>